# cv_cmake_tutorial

cpp_hw1/: CMakeLists.txt  Dockerfile  main_test.cpp  main_train.cpp
cpp_hw1/src/: knn_test.cpp  knn_train.cpp
